unpackaged/main/default/objects/cmbls__GL_Transaction__c/cmbls__GL_Transaction__c.object-meta.xml
<CustomObject>
    <label>GL Transaction</label>
    <nameField>
        <label>GL Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>