unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/ACH_Batch__c.field-meta.xml
<CustomField>
    <fullName>ACH_Batch__c</fullName>
    <formula>cmbls__Payment__r.cmbls__ACH_Batch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACH Batch</label>
    <type>Text</type>
</CustomField>