unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/Additional_GL_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Additional_GL_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional GL Transaction</label>
    <referenceTo>Additional_GL_Transaction__c</referenceTo>
    <relationshipLabel>GL Transactions</relationshipLabel>
    <relationshipName>GL_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>