unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <formula>cmbls__Payment__r.Check_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check #</label>
    <type>Text</type>
</CustomField>