unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/cmbls__Checkbook_ID__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Checkbook_ID__c</fullName>
    <label>Checkbook ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>