unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/cmbls__Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Credit_Amount__c</fullName>
    <label>Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>