unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/cmbls__Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>