unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/cmbls__Description__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>