unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/cmbls__Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Entity_ID__c</fullName>
    <label>Entity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>