unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/cmbls__Invoice__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Invoice__c</fullName>
    <label>Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>