unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/cmbls__Payment__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>cmbls__Payment__c</referenceTo>
    <relationshipLabel>GL Transactions</relationshipLabel>
    <relationshipName>GL_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>