unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/cmbls__Repayment__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Repayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repayment</label>
    <referenceTo>cmbls__Repayment__c</referenceTo>
    <relationshipLabel>GL Transactions</relationshipLabel>
    <relationshipName>GL_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>