unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/Earliest_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Post_Date__c</fullName>
    <inlineHelpText>Earliest available post date for the accounting period that has not been closed. Populated via automation at the time of GL Transaction creation by referencing the ‘Accounting Period’ records.</inlineHelpText>
    <label>Earliest Post Date</label>
    <type>Date</type>
</CustomField>