unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense</label>
    <referenceTo>cmbls__Expense__c</referenceTo>
    <relationshipLabel>GL Transactions</relationshipLabel>
    <relationshipName>GL_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>