unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/GL_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Date__c</fullName>
    <formula>IF(ISBLANK(GL_Override_Date__c),  GL_Default_Date__c , GL_Override_Date__c)</formula>
    <label>GL Date</label>
    <type>Date</type>
</CustomField>