unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/GL_Default_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Default_Date__c</fullName>
    <formula>IF(cmbls__Date__c &gt;  Earliest_Post_Date__c  , cmbls__Date__c, Earliest_Post_Date__c)</formula>
    <label>GL Default Date</label>
    <type>Date</type>
</CustomField>