unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/GL_Override_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Override_Date__c</fullName>
    <label>GL Override Date</label>
    <type>Date</type>
</CustomField>