unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/Interest_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Interest_Accrual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interest Accrual</label>
    <referenceTo>cmbls__InterestAccrual__c</referenceTo>
    <relationshipLabel>GL Transactions</relationshipLabel>
    <relationshipName>GL_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>