unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/Journal_Entry_Number__c.field-meta.xml
<CustomField>
    <fullName>Journal_Entry_Number__c</fullName>
    <formula>IF(
            NOT(ISBLANK(Journal_Entry_Override__c)), Journal_Entry_Override__c,
            IF(
                NOT(ISBLANK(Split_Batch__c)), Split_Batch__c,
                IF(
                    NOT(ISBLANK(ACH_Batch__c)), ACH_Batch__c,
                    IF(
                        NOT(ISBLANK(Check_Number__c)), Check_Number__c,
                        IF(
                            CONTAINS(Source_Record__c, 'Refund'), Source_Record__c,
                            IF(NOT(ISBLANK(Disbursement_Batch__c)), Disbursement_Batch__c, Source_Record__c)
                        )
                    )
                )
            )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journal Entry #</label>
    <type>Text</type>
</CustomField>