unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/Journal_Entry_Override__c.field-meta.xml
<CustomField>
    <fullName>Journal_Entry_Override__c</fullName>
    <label>Journal Entry # Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>