unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/Loan_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Loan_Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Transfer</label>
    <referenceTo>cmbls__Loan_Transfer__c</referenceTo>
    <relationshipLabel>GL Transactions</relationshipLabel>
    <relationshipName>GL_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>