unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Number__c</fullName>
    <formula>cmbls__Payment__r.cmbls__Check__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment #</label>
    <type>Text</type>
</CustomField>