unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/Source_Record__c.field-meta.xml
<CustomField>
    <fullName>Source_Record__c</fullName>
    <formula>IF(
			NOT(ISBLANK(Additional_GL_Transaction__c)), Additional_GL_Transaction__r.Name,
			IF(
				NOT(ISBLANK(cmbls__Payment__c)), cmbls__Payment__r.Name,
				IF(
					NOT(ISBLANK(Expense_Accrual__c)), Expense_Accrual__r.Name,
					IF(
						NOT(ISBLANK(Expense__c)), Expense__r.Name,
						IF(
							NOT(ISBLANK(cmbls__Invoice__c)), cmbls__Invoice__c,
							IF(
								NOT(ISBLANK(Interest_Accrual__c)), Interest_Accrual__r.Name,
								IF(
									NOT(ISBLANK(Intercompany_Transaction__c)), Intercompany_Transaction__r.Name,
									IF(
									    NOT(ISBLANK(Loan_Transfer__c)), Loan_Transfer__r.cmbls__Loan_Transfer_Summary__r.Name,
									    IF(
										    cmbls__Disbursement__r.RecordType.Name == 'Refund',
										    'Refund['&amp;cmbls__Disbursement__r.cmbls__Disbursement_Batch__r.Name&amp;']',
										    cmbls__Repayment__r.Name
									    )
								    )
								)
							)
						)
					)
				)
			)
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Record</label>
    <type>Text</type>
</CustomField>