unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/Source_Record_Creator__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Record Creator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GL_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>