unpackaged/main/default/objects/cmbls__GL_Transaction__c/fields/Split_Batch__c.field-meta.xml
<CustomField>
    <fullName>Split_Batch__c</fullName>
    <formula>cmbls__Payment__r.cmbls__Split_Batch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Batch</label>
    <type>Text</type>
</CustomField>